# RA6A

./: .gitignore  README.md
frimware/ra6aM/: .mxproject  Makefile  ra6aM.ioc
frimware/ra6aM/Core/Src/: main.c  stm32f4xx_hal_msp.c
hardware/cad/: 60T L22 1.STEP  6656K153_Steel Ball Bearing.STEP  6906 ball bearing.STEP  6907 ball bearing.STEP  AR4_SG1_16.5_gear_rod.STEP  AR4_SG1_70mm_carriage_rod.STEP  AR4_SG1_assembly.STEP  AR4_SG1_base.STEP  AR4_SG1_carriage.STEP  AR4_SG1_center_bar.STEP  AR4_SG1_gear.STEP  AR4_SG1_jaw1.STEP  AR4_SG1_jaw2.STEP  EG23-G10-D8.STEP  L1 bh1 LH.STEP  L1 bh1.STEP  L1 cover.STEP  L1 pulley 1.STEP  L1.STEP  L2 St holder 1.STEP  L2 pulley.STEP  L21 Top New.STEP  L21 bottom2022.STEP  L21-L22-bearing-fix.STEP  L21-L22-shaft-2.STEP  L21-L22-shaft.STEP  L22 start new 3.STEP  L22 start new Bearing cover.STEP  L22 to Wrist 16T small pully.STEP  M3x8 cap screw.STEP  Servo 25Kg.STEP  Servo Arm.STEP  Wrist SM in L22.STEP  base-1-v1.STEP  base-2-v2.STEP  baseV2-side cover.STEP  bottom base connector.STEP  collar L2.STEP  collar rotabase 2.STEP  collar rotabase.STEP  (+24 more)
ros2_ws/src/ra6a/: CMakeLists.txt  package.xml
ros2_ws/src/ra6a/launch/: display.launch.py  display1.launch.py
ros2_ws/src/ra6a/meshes/: base_link.stl  end_effector.stl  l1.stl  l2.stl  l3.stl  l4.stl  l5.stl
ros2_ws/src/ra6a/urdf/: ra6a.urdf  ra6a1.urdf
ros2_ws/src/ra6a_hardware/: CMakeLists.txt  package.xml  ra6a_hardware.xml
ros2_ws/src/ra6a_hardware/include/ra6a_hardware/: ra6a_system (copy).hpp  ra6a_system.hpp
ros2_ws/src/ra6a_hardware/src/: ra6a_system (copy).cpp  ra6a_system.cpp
ros2_ws/src/ra6a_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/ra6a_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ra6a.ros2_control.xacro  ra6a.srdf  ra6a.urdf.xacro  ros2_controllers.yaml  servo_params.yaml
ros2_ws/src/ra6a_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_ws/src/serial/: CMakeLists.txt
ros2_ws/src/workspace_fk_visualizer/: package.xml  setup.cfg  setup.py
ros2_ws/src/workspace_fk_visualizer/workspace_fk_visualizer/: fk_workspace_py.py
scripts/: aruco_detect.py  calibrate_camera.py  calibrate_vision.py  cube_detector_node.py  pick_and_place_vision.py  ps5_teleop.py  save_box_positions.py
